[gd_scene load_steps=5 format=2]

[ext_resource path="res://aiden/sprites/needle.png" type="Texture" id=1]
[ext_resource path="res://aiden/needle.gd" type="Script" id=2]
[ext_resource path="res://sounds/needle_break.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.4, 1 )

[node name="Needle" type="Area2D"]
process_priority = -1
rotation = -6.28319
z_index = 100
collision_layer = 256
collision_mask = 256
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.00001, 1 )
scale = Vector2( 5, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="BreakSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="area_entered" from="." to="." method="_on_Needle_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Needle_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="BreakSound" to="." method="_on_BreakSound_finished"]
